<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="bottom" >
	<LinearLayout 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="bottom">
	<Button
	    android:id="@+id/menu1"
		android:layout_width="wrap_content"
		android:layout_height="60dip"
		android:text="@string/menu_setting"
		android:drawableTop="@drawable/ic_menu_set"
		android:background="@drawable/bg_list_view"
		android:layout_weight="1">
	</Button>
	<Button
	    android:id="@+id/menu2"
		android:layout_width="wrap_content"
		android:layout_height="60dip"
		android:text="@string/menu_contact"
		android:drawableTop="@drawable/ic_menu_feedback"
		android:background="@drawable/bg_list_view"
		android:layout_weight="1">
	</Button>
	<Button
	    android:id="@+id/menu3"
		android:layout_width="wrap_content"
		android:layout_height="60dip"
		android:text="@string/tab_title_manage"
		android:drawableTop="@drawable/ic_menu_about"
		android:background="@drawable/bg_list_view"
		android:layout_weight="1">
	</Button>
	<Button
	    android:id="@+id/menu4"
		android:layout_width="wrap_content"
		android:layout_height="60dip"
		android:text="@string/menu_exit"
		android:drawableTop="@drawable/ic_menu_exit"
		android:background="@drawable/bg_list_view"
		android:layout_weight="1">
	</Button>   
	    
	    
	</LinearLayout>
    

</LinearLayout>