<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/translucent_background" xmlns:android="http://schemas.android.com/apk/res/android">
   
	<LinearLayout 
    android:layout_height="300dip" 
    android:layout_width="fill_parent" 
    android:layout_marginBottom="60dip" 
    android:layout_marginLeft="28dip" 
    android:layout_marginRight="28dip" 
    android:layout_marginTop="60dip" 
    android:orientation="vertical"
    android:background="@drawable/pop_box" 
    >

    <LinearLayout
		android:layout_width="fill_parent" android:layout_height="0.0dip"
		android:layout_weight="1" android:orientation="vertical">
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="0.0dip"
		 android:layout_weight="1" android:orientation="vertical">

		<TextView
			android:text="@string/please_comment_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="5.0dip"
			style="@style/market_product_list_name_font" />
	
		<EditText
			android:layout_width="fill_parent" android:layout_height="126.0dip" android:layout_weight="10"
			android:gravity="top" 
			android:hint="@string/please_comment_hit"
			android:id="@+id/comment_content"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="bottom">
		<Button 
			android:id="@+id/btn_confirm_comment" android:background="@drawable/btn_ok_cancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" android:text="@string/btn_ok"
			android:layout_gravity="center_vertical" android:layout_marginTop="10.0dip"
			android:layout_marginBottom="2.0dip" 
			android:layout_marginLeft="30.0dip" android:layout_marginRight="10.0dip" 
			android:textAppearance="?android:textAppearanceMedium" 
			style="@style/app_name_white_font"
			/>
		<Button 
			android:id="@+id/btn_cancel_comment" android:background="@drawable/btn_ok_cancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" android:text="@string/btn_cancel"
			android:layout_gravity="center_vertical" android:layout_marginTop="10.0dip" 
			android:layout_marginBottom="2.0dip" 
			android:layout_marginRight="30.0dip" android:layout_marginLeft="10.0dip"
			android:textAppearance="?android:textAppearanceMedium" 
			style="@style/app_name_white_font"
		/>
	</LinearLayout>
	<TextView
			android:text="@string/please_comment_qq"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginTop="10.0dip"
			android:layout_marginLeft="5.0dip"
			style="@style/market_product_list_name_font" />
	</LinearLayout>
	</LinearLayout>
</RelativeLayout>
