<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:gravity="center" android:layout_gravity="center_vertical"
	android:background="@drawable/bg_tab_header"
	android:orientation="horizontal" >
	<TextView
		android:id="@+id/add_comment_expression" android:visibility="gone"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
    	android:gravity="center" android:text="@string/not_install_expression" />
	<Button
    	android:id="@+id/btn_post_comment"
    	android:layout_width="100dip" android:layout_height="wrap_content"
    	android:layout_marginLeft="20dip"
    	android:layout_marginTop="3.0dip"
    	android:gravity="center" android:text="@string/btn_add_comment" />
    <Button
    	android:id="@+id/btn_refresh_comment"
    	android:layout_width="100dip" android:layout_height="wrap_content"
    	android:layout_marginRight="20dip"
    	android:layout_marginTop="3.0dip"
    	android:gravity="center" android:text="@string/btn_refresh_comment" />
    <!-- 
    <Button
    	android:id="@+id/btn_report_error"
    	android:layout_width="0dip" android:layout_height="wrap_content"
    	android:layout_weight="1" android:gravity="center"
    	android:text="@string/btn_report_error" />
     -->
</LinearLayout>