<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_horizontal"
	android:background="@drawable/bg_list_view"> 
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@drawable/title_bg">
		
<!--  		<Button 
			android:id="@+id/btn_back_add_comment" android:layout_margin="5.0dip" 
			android:layout_width="wrap_content" android:layout_height="fill_parent" 
			android:background="@drawable/ic_appinfo_comments_back_normal" 
			android:gravity="center_vertical" android:layout_gravity="center_vertical">
		</Button>-->
		
		<TextView 
			android:text="@string/my_comment" android:layout_height="fill_parent"
			style="@style/app_name_white_font" android:gravity="center" 
			android:layout_gravity="fill_horizontal" android:layout_width="fill_parent">
		</TextView>
		
		
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="46dip"
		android:background="@drawable/bg_list_view"
		android:layout_weight="1" android:orientation="vertical" android:weightSum="1">
		 <RelativeLayout
			android:layout_width="fill_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_weight="0.05">
			<RatingBar  
				android:id="@+id/comment_ratingbar" 
	            android:isIndicator="false"
				style="@style/CommentRatingBar"
	            android:layout_width="wrap_content"
	            android:numStars="5"
	        	android:rating="5" 
	        	android:stepSize="1"
	        	android:layout_alignParentLeft="true"
	        	android:layout_centerVertical="true"
	        	android:layout_marginTop="12dip"
	        	android:layout_marginLeft="12dip"
	        	android:layout_height="wrap_content"/>
			<TextView
				android:text="@string/please_comment"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="12dip"
				android:layout_marginRight="15dip"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:background="@drawable/bg_list_view"
				style="@style/app_name_font" />
	     </RelativeLayout>
		 <LinearLayout android:layout_width="fill_parent" android:gravity="top" android:orientation="horizontal" android:layout_gravity="top" android:background="@drawable/bg_list_view" android:layout_weight="0.93" android:layout_height="wrap_content">
		     <EditText android:hint="@string/add_hint_new" android:layout_marginLeft="5.0dip" android:id="@+id/comment_content" android:background="@drawable/bg_appinfo_comment_edit" android:layout_marginRight="5.0dip" android:layout_marginTop="2.0dip" android:layout_height="fill_parent" android:layout_width="fill_parent" android:gravity="top"></EditText>
		 </LinearLayout>
	</LinearLayout>
	<RelativeLayout
		android:layout_width="fill_parent" android:layout_height="50dip"
		android:layout_marginBottom="5dip"
		android:background="@drawable/bg_list_view"
		android:orientation="horizontal">
		<Button 
			android:id="@+id/btn_confirm_comment" android:background="@drawable/btn_appinfo_comments_detail_operate"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/btn_ok"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="30.0dip"
			android:textAppearance="?android:textAppearanceMedium" 
			style="@style/app_name_white_font"
			/>
		<Button 
			android:id="@+id/btn_cancel_comment" android:background="@drawable/btn_appinfo_comments_detail_operate"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/btn_cancel"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="30.0dip"
			android:textAppearance="?android:textAppearanceMedium" 
			style="@style/app_name_white_font"
		/>
	</RelativeLayout>
	
</LinearLayout>