<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_horizontal"
	android:background="@color/white"
	>
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="50.0dip"
		android:orientation="horizontal"
		android:background="@drawable/bg_list_item_focused">
		<Button 
			android:id="@+id/btn_back_update_comment" android:layout_marginLeft="5.0dip"
			android:layout_marginTop="5.0dip"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/ic_appinfo_comments_back_normal"/>
			
		<TextView 
			android:text="@string/update_comment"
			android:layout_width="0dp" android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center" android:gravity="center"
			style="@style/app_name_white_font"
		/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="0.0dip"
		 android:layout_weight="1" android:orientation="vertical">
		<TextView
			android:text="@string/please_update_comment"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="5.0dip"
			style="@style/market_product_list_name_font" />
		<RatingBar  
			android:id="@+id/update_comment_ratingbar"
            android:isIndicator="false"
			style="?android:attr/ratingBarStyleIndicator"
            android:layout_marginLeft="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:numStars="5"
        	android:stepSize="1" 
        	/>
	
		<EditText
			 android:id="@+id/update_comment_content" 
			 android:layout_width="fill_parent" android:layout_height="0.0dip"
			 android:layout_weight="1" android:gravity="top"/> 
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="bottom">
		<Button 
			android:id="@+id/btn_confirm_update_comment" android:background="@drawable/btn_appinfo_comments_detail_operate"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" android:text="@string/btn_ok"
			android:layout_gravity="center_vertical" android:paddingBottom="10.0dip"
			android:layout_marginLeft="30.0dip" android:layout_marginRight="10.0dip" 
			android:textAppearance="?android:textAppearanceMedium" 
			style="@style/app_name_white_font"
			/>
		<Button 
			android:id="@+id/btn_cancel_update_comment" android:background="@drawable/btn_appinfo_comments_detail_operate"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" android:text="@string/btn_cancel"
			android:layout_gravity="center_vertical" android:paddingBottom="10.0dip" 
			android:layout_marginRight="30.0dip" android:layout_marginLeft="10.0dip"
			android:textAppearance="?android:textAppearanceMedium" 
			style="@style/app_name_white_font"
		/>
	</LinearLayout>
	
</LinearLayout>