<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical" 
  android:background="@color/black">
    <LinearLayout android:layout_width="fill_parent" 
                  android:layout_height="wrap_content" 
                  android:id="@+id/linearLayout1" android:background="@color/silver_grey">
        <ImageView android:layout_width="80dip" 
                   android:src="@drawable/version_icon" 
                   android:layout_height="80dip"  
                   android:id="@+id/uninstall_app_icon">
                   </ImageView>
        <TextView android:id="@+id/app_title" 
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content"
                  android:textSize="25sp" 
                  android:layout_marginTop="25dip"></TextView>
    </LinearLayout>
    
    <LinearLayout android:id="@+id/linearLayout2" 
                  android:layout_height="fill_parent" 
                  android:layout_width="fill_parent" 
                  android:orientation="vertical" android:weightSum="1">
                  
        <TextView android:id="@+id/signature_hint" 
                  android:text="@string/dlg_apk_signature_hint" 
                  android:textSize="22sp" 
                  android:layout_marginTop="5dip" 
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content" 
                  android:layout_weight="0.9" 
                  android:gravity="top|fill_horizontal">
        </TextView>
                  
                       
        <LinearLayout android:id="@+id/relativeLayout1" 
                  android:layout_width="fill_parent" 
                  android:background="@color/silver_grey"
                  android:orientation="horizontal" 
                  android:layout_gravity="bottom|fill_vertical" 
                  android:layout_height="wrap_content" 
                  android:weightSum="1" 
                  android:gravity="fill_horizontal" 
                  android:layout_weight="0.1">
                        
	            <Button android:id="@+id/btn_ok_uninstall_hint" 
	                    android:text="@string/btn_ok" 	                   
	                    android:textSize="18sp"
	                    android:layout_width="wrap_content" 
	                    android:layout_height="wrap_content" 
	                    android:layout_gravity="left|center_vertical" 
	                    android:layout_weight="0.5" 
	                    android:layout_marginLeft="5dip" 
	                    android:layout_marginRight="10dip">
	            </Button>
	            <Button android:id="@+id/btn_cancel_uninstall_hint" 
	            android:text="@string/btn_cancel" 
	            android:textSize="18sp" 
	            android:layout_height="wrap_content" 
	            android:layout_width="wrap_content" 
	            android:layout_gravity="right|center_vertical" 
	            android:layout_weight="0.5" 
	            android:layout_marginLeft="10dip" 
	            android:layout_marginRight="5dip"></Button>
	            
        </LinearLayout> 
        
    </LinearLayout>
    
</LinearLayout>
